--- a/config/scaffolding/Test28Project.yml
+++ b/config/scaffolding/Test28Project.yml
@@ -7,3 +7,8 @@ packages:
   gitUrl: https://github.com/Munatri/Test28Project
   gitUsername: Munatri
   gitBranch: main
+- name: CustomPackage
+  gitServerName: GithubOrigin
+  gitUrl: https://github.com/Munatri
+  gitUsername: Munatri
+  gitBranch: main
